{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 2279,
  "lineage": "b4ee9b71-f31c-9a13-9ade-a5fe185a2945",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f4754478d679fbb0",
            "arn": "arn:aws:ec2:us-east-1:950876749850:elastic-ip/eipalloc-0f4754478d679fbb0",
            "domain": "vpc",
            "id": "eipalloc-0f4754478d679fbb0",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-215-219-212.compute-1.amazonaws.com",
            "public_ip": "44.215.219.212",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "nat-eip"
            },
            "tags_all": {
              "Name": "nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0532be01f26a3de55",
            "arn": "arn:aws:ec2:us-east-1:950876749850:instance/i-0e659a9e24adfe0dc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "iam-profile",
            "id": "i-0e659a9e24adfe0dc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-03c55c5a245354cb9"
              }
            ],
            "primary_network_interface_id": "eni-03c55c5a245354cb9",
            "private_dns": "ip-10-30-1-44.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.30.1.44",
            "public_dns": "ec2-13-219-242-165.compute-1.amazonaws.com",
            "public_ip": "13.219.242.165",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07be29b60f0b68843",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-086c8cab7a340e26b",
            "tags": {
              "Name": "ec2-lab"
            },
            "tags_all": {
              "Name": "ec2-lab"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08cdfd72804ccd347"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "i-0e659a9e24adfe0dc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.iam_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.ec2_lab_sg",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.al2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950876749850:internet-gateway/igw-0a0d7b211a82244db",
            "id": "igw-0a0d7b211a82244db",
            "owner_id": "950876749850",
            "region": "us-east-1",
            "tags": {
              "Name": "main-igw"
            },
            "tags_all": {
              "Name": "main-igw"
            },
            "vpc_id": "vpc-09402972d5564623e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f4754478d679fbb0",
            "association_id": "eipassoc-0ffc01b8774394c42",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0c3061dac98a06741",
            "network_interface_id": "eni-09b82de9e354b929a",
            "private_ip": "10.30.1.210",
            "public_ip": "44.215.219.212",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-086c8cab7a340e26b",
            "tags": {
              "Name": "main-nat"
            },
            "tags_all": {
              "Name": "main-nat"
            },
            "vpc_id": "vpc-09402972d5564623e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.main_nat_eip",
            "aws_internet_gateway.main_igw",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950876749850:route-table/rtb-07e28bde2bcccd99b",
            "id": "rtb-07e28bde2bcccd99b",
            "owner_id": "950876749850",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c3061dac98a06741",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route"
            },
            "tags_all": {
              "Name": "private_route"
            },
            "timeouts": null,
            "vpc_id": "vpc-09402972d5564623e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "rtb-07e28bde2bcccd99b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.main_nat_eip",
            "aws_internet_gateway.main_igw",
            "aws_nat_gateway.main_nat",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950876749850:route-table/rtb-0f9ff82e13eb79528",
            "id": "rtb-0f9ff82e13eb79528",
            "owner_id": "950876749850",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a0d7b211a82244db",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route"
            },
            "tags_all": {
              "Name": "public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-09402972d5564623e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "rtb-0f9ff82e13eb79528",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057e92bd5ddd442e0",
            "region": "us-east-1",
            "route_table_id": "rtb-07e28bde2bcccd99b",
            "subnet_id": "subnet-0a466e0b2c9ed591e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.main_nat_eip",
            "aws_internet_gateway.main_igw",
            "aws_nat_gateway.main_nat",
            "aws_route_table.private_route",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8f4aea4a3b61ab7",
            "region": "us-east-1",
            "route_table_id": "rtb-07e28bde2bcccd99b",
            "subnet_id": "subnet-0a2cc010dc7263036"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.main_nat_eip",
            "aws_internet_gateway.main_igw",
            "aws_nat_gateway.main_nat",
            "aws_route_table.private_route",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aef0a1fef66b61af",
            "region": "us-east-1",
            "route_table_id": "rtb-07e28bde2bcccd99b",
            "subnet_id": "subnet-0799d58ab06d582bb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.main_nat_eip",
            "aws_internet_gateway.main_igw",
            "aws_nat_gateway.main_nat",
            "aws_route_table.private_route",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065f1a6fec44c26ed",
            "region": "us-east-1",
            "route_table_id": "rtb-0f9ff82e13eb79528",
            "subnet_id": "subnet-086c8cab7a340e26b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.public_route",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1378232af47be32",
            "region": "us-east-1",
            "route_table_id": "rtb-0f9ff82e13eb79528",
            "subnet_id": "subnet-0b1cdbb9e56293921"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.public_route",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068302f0542a2d6f3",
            "region": "us-east-1",
            "route_table_id": "rtb-0f9ff82e13eb79528",
            "subnet_id": "subnet-03be00421bf71ba4a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.public_route",
            "aws_subnet.public",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_lab_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950876749850:security-group/sg-08cdfd72804ccd347",
            "description": "sg for http browser \u0026 ssh into",
            "egress": [],
            "id": "sg-08cdfd72804ccd347",
            "ingress": [],
            "name": "ec2-lab",
            "name_prefix": "",
            "owner_id": "950876749850",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-lab-sg"
            },
            "tags_all": {
              "Name": "ec2-lab-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09402972d5564623e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sg-08cdfd72804ccd347",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_lab_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950876749850:security-group/sg-0b781c7324f33a157",
            "description": "sg for rds private",
            "egress": [],
            "id": "sg-0b781c7324f33a157",
            "ingress": [],
            "name": "rds-lab",
            "name_prefix": "",
            "owner_id": "950876749850",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-lab-sg"
            },
            "tags_all": {
              "Name": "rds-lab-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09402972d5564623e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sg-0b781c7324f33a157",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950876749850:subnet/subnet-0a466e0b2c9ed591e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.30.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a466e0b2c9ed591e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "950876749850",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-1"
            },
            "tags_all": {
              "Name": "private-1"
            },
            "vpc_id": "vpc-09402972d5564623e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "subnet-0a466e0b2c9ed591e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950876749850:subnet/subnet-0a2cc010dc7263036",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.30.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2cc010dc7263036",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "950876749850",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-2"
            },
            "tags_all": {
              "Name": "private-2"
            },
            "vpc_id": "vpc-09402972d5564623e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "subnet-0a2cc010dc7263036",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950876749850:subnet/subnet-0799d58ab06d582bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.30.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0799d58ab06d582bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "950876749850",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-3"
            },
            "tags_all": {
              "Name": "private-3"
            },
            "vpc_id": "vpc-09402972d5564623e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "subnet-0799d58ab06d582bb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950876749850:subnet/subnet-086c8cab7a340e26b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.30.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086c8cab7a340e26b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "950876749850",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-a"
            },
            "tags_all": {
              "Name": "public-a"
            },
            "vpc_id": "vpc-09402972d5564623e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "subnet-086c8cab7a340e26b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950876749850:subnet/subnet-0b1cdbb9e56293921",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.30.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1cdbb9e56293921",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "950876749850",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-b"
            },
            "tags_all": {
              "Name": "public-b"
            },
            "vpc_id": "vpc-09402972d5564623e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "subnet-0b1cdbb9e56293921",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950876749850:subnet/subnet-03be00421bf71ba4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.30.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03be00421bf71ba4a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "950876749850",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-c"
            },
            "tags_all": {
              "Name": "public-c"
            },
            "vpc_id": "vpc-09402972d5564623e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "subnet-03be00421bf71ba4a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950876749850:vpc/vpc-09402972d5564623e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.30.0.0/16",
            "default_network_acl_id": "acl-0a18a1504d1bc50d2",
            "default_route_table_id": "rtb-0c88ebb3908f27970",
            "default_security_group_id": "sg-0d9f10cbe06b6f1a8",
            "dhcp_options_id": "dopt-0a73e383ca9cf31a0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09402972d5564623e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c88ebb3908f27970",
            "owner_id": "950876749850",
            "region": "us-east-1",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "vpc-09402972d5564623e",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ec2_lab_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950876749850:security-group-rule/sgr-021e4a453dc42d4ce",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-021e4a453dc42d4ce",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-08cdfd72804ccd347",
            "security_group_rule_id": "sgr-021e4a453dc42d4ce",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sgr-021e4a453dc42d4ce",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2_lab_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "rds_mysql_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950876749850:security-group-rule/sgr-0134d7f4013c2af95",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0134d7f4013c2af95",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0b781c7324f33a157",
            "security_group_rule_id": "sgr-0134d7f4013c2af95",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sgr-0134d7f4013c2af95",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.rds_lab_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ec2_lab_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950876749850:security-group-rule/sgr-048594de3b584a119",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-048594de3b584a119",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-08cdfd72804ccd347",
            "security_group_rule_id": "sgr-048594de3b584a119",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sgr-048594de3b584a119",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2_lab_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ec2_lab_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950876749850:security-group-rule/sgr-07c0f428e11886f85",
            "cidr_ipv4": "174.245.87.223/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-07c0f428e11886f85",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-08cdfd72804ccd347",
            "security_group_rule_id": "sgr-07c0f428e11886f85",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sgr-07c0f428e11886f85",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2_lab_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rds_lab_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:950876749850:security-group-rule/sgr-0018e3689c053bf4b",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-0018e3689c053bf4b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-08cdfd72804ccd347",
            "region": "us-east-1",
            "security_group_id": "sg-0b781c7324f33a157",
            "security_group_rule_id": "sgr-0018e3689c053bf4b",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "950876749850",
            "id": "sgr-0018e3689c053bf4b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2_lab_sg",
            "aws_security_group.rds_lab_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    }
  ]
}